# contamination-watch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  kaggle-gpu.yml  watch.yml
data/: watch.sqlite3
infra/: modal_sweep.py
infra/kaggle/: kernel-metadata.json  sweep_kernel.py
site/: index.html  results.json
src/contamination_watch/: analyst.py  cli.py  config.py  demo.py  runner.py  scorer.py  site.py  store.py  watcher.py
