[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contamination-watch"
version = "0.1.0"
description = "Continuous benchmark-contamination auditing of new LLM releases, powered by benchleak"
requires-python = ">=3.10"
dependencies = [
    "benchleak>=0.4.0",
    "huggingface_hub>=0.23",
]

[project.optional-dependencies]
analyst = ["anthropic>=0.34"]
gpu = ["torch", "transformers", "datasets"]

[project.scripts]
contamination-watch = "contamination_watch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/contamination_watch"]
